# KVG_RGB

./: .gitignore  MANIFEST.in  QUICKSTART.md  README.md  RELEASE.md  TODO.md  build_exe.py  build_installer.py  build_release.py  installer.py  installer_old.py  main.py  pyproject.toml  release.ps1  release.py  requirements-dev.txt  requirements.txt  rgb_utils.py  setup.py  zone_manager.py
docs/: CHANGELOG.md  INSTALL.md  TROUBLESHOOTING.md
kvg_rgb/: __init__.py  autostart.py  cli.py  config.py  core.py  database.py  paths.py  web.py
kvg_rgb/effects/: __init__.py  manager.py
kvg_rgb/scripts/: start_kvg_rgb.bat
kvg_rgb/static/: app.js  style.css
kvg_rgb/templates/: index.html
