[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvg-rgb"
dynamic = ["version", "dependencies"]
description = "RGB device controller using OpenRGB with CLI and web UI support"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "KVG"}
]

[project.scripts]
kvg-rgb = "kvg_rgb.cli:main"

[tool.setuptools]
# Let setuptools auto-discover all packages including subpackages
packages = {find = {}}

[tool.setuptools.dynamic]
version = {attr = "kvg_rgb.__version__"}
dependencies = {file = ["requirements.txt"]}
